--- a/kintone-help-astro-poc/.env.jp
+++ b/kintone-help-astro-poc/.env.jp
@@ -7,9 +7,9 @@ PUBLIC_TARGET_REGION=JP
 PUBLIC_KINTONE=kintone
 PUBLIC_SERVICE=cybozu.com
 PUBLIC_CYBOZU_COM=cybozu.com
-PUBLIC_FAVICON=kintone/img/kintone_favicon.ico
-PUBLIC_LOGO=kintone/img/img_logo_kintone_head.svg
-PUBLIC_OG_IMG=kintone/img/kintonehelp.svg
+PUBLIC_FAVICON=img/kintone_favicon.ico
+PUBLIC_LOGO=img/img_logo_kintone_head.svg
+PUBLIC_OG_IMG=img/kintonehelp.svg
 
 # 機能フラグ
 PUBLIC_LANG_SELECTOR=true
@@ -26,7 +26,7 @@ PUBLIC_DEVNET_URL=https://cybozu.dev/
 PUBLIC_CUSTOM_CSS=/k/stylesheets/custom_kin.css
 
 # ラベル色設定（JSON形式）
-PUBLIC_LABEL_COLORS=["#ffdddd","#ddffdd","#ffffdd"]
+PUBLIC_LABEL_COLORS='#ffdddd,#ddffdd,#ffffdd'
 
 # 言語設定（デフォルト値）
 PUBLIC_DEFAULT_CONTENT_LANGUAGE=ja
@@ -35,7 +35,7 @@ PUBLIC_LANGUAGE_CODE=ja-jp
 # 日本語設定
 PUBLIC_PRODUCT_NAME=kintone
 PUBLIC_HELP=ヘルプ
-PUBLIC_GOOGLE_SEARCH_TABS=["すべて","kintone","cybozu.com共通管理","契約と支払い","kintone FAQ","cybozu.com FAQ"]
+PUBLIC_GOOGLE_SEARCH_TABS='すべて,kintone,cybozu.com共通管理,契約と支払い,kintone FAQ,cybozu.com FAQ'
 PUBLIC_CORP_NAME=サイボウズ
 PUBLIC_STORE=サイボウズドットコム ストア
 PUBLIC_SLASH=cybozu.com
@@ -43,7 +43,7 @@ PUBLIC_SLASH_HELP=cybozu.com ヘルプ
 PUBLIC_SLASH_ADMINISTRATORS=cybozu.com共通管理者
 PUBLIC_SLASH_UI=cybozu.com共通管理
 PUBLIC_LABEL_LEAD=対象読者
-PUBLIC_LABEL_CONTENTS=["全員","運用管理者","システム管理者"]
+PUBLIC_LABEL_CONTENTS='全員,運用管理者,システム管理者'
 
 # 英語設定 - 一時的にコメントアウト
 # PUBLIC_PRODUCT_NAME_EN=kintone
