--- a/kintone-help-astro-poc/.env.us
+++ b/kintone-help-astro-poc/.env.us
@@ -36,7 +36,7 @@ PUBLIC_LANGUAGE_CODE=ja-jp
 # 日本語設定（USリージョン用）
 PUBLIC_PRODUCT_NAME=Kintone
 PUBLIC_HELP=ヘルプ
-PUBLIC_GOOGLE_SEARCH_TABS=["すべて","Kintone","Kintone共通管理","試用や購入"]
+PUBLIC_GOOGLE_SEARCH_TABS='すべて,Kintone,Kintone共通管理,試用や購入'
 PUBLIC_CORP_NAME=Kintone Corp
 PUBLIC_STORE=Kintone Store
 PUBLIC_SLASH=Kintone
