--- a/kintone-help-astro-poc/.env.us_staging
+++ b/kintone-help-astro-poc/.env.us_staging
@@ -36,7 +36,7 @@ PUBLIC_LANGUAGE_CODE=ja-jp
 # 日本語設定（US Stagingリージョン用）
 PUBLIC_PRODUCT_NAME=kintone
 PUBLIC_HELP=ヘルプ
-PUBLIC_GOOGLE_SEARCH_TABS=["すべて","kintone","cybozu.com共通管理","契約と支払い","kintone FAQ","cybozu.com FAQ"]
+PUBLIC_GOOGLE_SEARCH_TABS='すべて,kintone,cybozu.com共通管理,契約と支払い,kintone FAQ,cybozu.com FAQ'
 PUBLIC_CORP_NAME=サイボウズ
 PUBLIC_STORE=サイボウズドットコム ストア
 PUBLIC_SLASH=cybozu.com
@@ -44,4 +44,4 @@ PUBLIC_SLASH_HELP=cybozu.com ヘルプ
 PUBLIC_SLASH_ADMINISTRATORS=cybozu.com共通管理者
 PUBLIC_SLASH_UI=cybozu.com共通管理
 PUBLIC_LABEL_LEAD=対象読者
-PUBLIC_LABEL_CONTENTS=["全員","運用管理者","システム管理者"]
+PUBLIC_LABEL_CONTENTS='全員,運用管理者,システム管理者'
