--- a/kintone-help-astro-poc/.env.cn
+++ b/kintone-help-astro-poc/.env.cn
@@ -32,7 +32,7 @@ PUBLIC_LANGUAGE_CODE=ja-jp
 # 日本語設定（CNリージョン用）
 PUBLIC_PRODUCT_NAME=kintone
 PUBLIC_HELP=ヘルプ
-PUBLIC_BING_SEARCH_TABS=["すべて","kintone","cybozu.cn共通管理"]
+PUBLIC_BING_SEARCH_TABS='すべて,kintone,cybozu.cn共通管理'
 PUBLIC_CORP_NAME=Cybozu
 PUBLIC_STORE=cybozu.cn ストア
 PUBLIC_SLASH=cybozu.cn
